chore(build): upgrade project to Java 24